@@ -11,6 +11,10 @@ Package author: Andy Salnikov
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V01-01-10
+2022-09-09 Mikhail Dubrovin
+- nd_format.h - try to get rid of warnings at compilation - array[i] -> (i)
+
 Tag: V01-01-09
 2022-01-07 Mikhail Dubrovin
 - include/nd_elem_access.h - comment-out __attribute__ ((deprecated))
